<resources>
    <string name="app_name">Tournament Manager</string>
    <string name="action_settings">Settings</string>
    <string name="acceptSettings">Accept Settings</string>
    <string name="tap_start">Tap screen to start.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_continue_tournament">Continue Tournament</string>
    <string name="button_start_tournament">Start Tournament</string>
    <string name="button_participants">Participants</string>
    <string name="button_teams">Teams</string>
    <string name="button_history">History</string>
    <string name="button_exit">Exit</string>
    <string name="title_history">Tournament History</string>
    <string name="title_participants">Roster</string>
    <string name="add_participant">Add Participant</string>
    <string name="edit_participant">Edit Participant</string>
    <string name="enter_info">Enter Participant Info</string>
    <string name="add_team">Add Team</string>
    <string name="edit_team">Edit Team</string>
    <string name="individuals">Individuals</string>
    <string name="teams">Teams</string>
    <string name="enter_name">Enter name:</string>
    <string name="is_team">Team?</string>
    <string name="tournament_size">Tournament Size</string>
    <string name="tournament_size_summary">Choose the size of the tournament</string>
    <string name="tournament_settings">Tournament Settings</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="tournament_name_summary">Choose the tournament name</string>
    <string name="elimination_type_label">Elimination Type</string>
    <string name="elimination_type_description">Choose if tournament is single or double elimination</string>
    <string name="team_size_label">Team Size</string>
    <string name="team_size_summary">Choose size of each team.</string>
    <string name="stat_tracking_label">Stat Tracking</string>
    <string name="stat_tracking_summary">Will the tournament track stats?</string>
    <string name="stat_categories">Stat Categories</string>
    <string name="stat_categories_summary">Enter the stat categories to be tracked.</string>
    <string name="generate_tournament">Generate</string>
    <string name="fill_participants">Fill Remaining</string>
    <string name="select_tournament">Select Tournament</string>
    <string name="select_participant">Select Participant</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="save_tournament_alert_dialog">Accept changes and save tournament?</string>
    <string name="update_tournament_alert_dialog">Update tournament template or save as new?</string>
    <string name="update_or_new_title">Update</string>
    <string name="update">Update</string>
    <string name="update_or_new_message">Update loaded template?</string>
    <string name="save_new">Save new</string>
    <string name="save">Save</string>
    <string name="createParticipant">Create Participant</string>
    <string name="load">Edit Saved</string>
    <string name="start_tournament_create_new">New</string>
    <string name="start_tournament_load_in_progress">Continue</string>
    <string name="stat_entry_title">Enter Stat Categories</string>
    <string name="matchNo">Match #</string>
    <string name="enter_result">Enter Result</string>
    <string name="set_winner">Winner</string>
    <string name="winnerCaps">WINNER</string>
    <string name="vs_subtitle">VS</string>
    <string name="start_tournament">Start</string>
    <string name="tournament_seeding">Tournament Seeding</string>
    <string name="saved_participants">Saved Participants</string>
    <string name="finalize_participants_title">Start Tournament</string>
    <string name="finalize_participants_message">Ready to proceed with current participants?</string>
    <string name="unassigned_title">Unassigned Participants</string>
    <string name="unassigned_message">Some participants are still unassigned.  Empty spots will
        be filled with generic participants.  Proceed?</string>
    <string name="create_new_participant">(New Participant)</string>
    <string name="add_participant_seedview">(Add Participant)</string>
    <string name="no_tournaments_title">No Tournaments Found</string>
    <string name="no_tournaments_message">There were no tournaments found to load.</string>
    <string name="over_title">Tournament complete.</string>
    <string name="over_message">All matches are complete.  Finalize tournament and exit?</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="winner">Winner</string>
    <string name="lastSaved">Last Saved</string>
    <string name="seed">Seed</string>
    <string name="id">ID</string>
    <string name="loadTournamentTitle">Load tournament</string>
    <string name="loadTournamentMessage">Load %s?</string>
    <string name="type">Type:</string>
    <string name="team">Team</string>
    <string name="individual">Individual</string>
    <string name="tournamentSizeText">Size: %d</string>
    <string name="saveTournament">Save Tournament</string>
    <string name="exitTournament">Exit Tournament</string>
    <string name="createTournamentTitle">Create New Tournament?</string>
    <string name="createTournamentMessage">Create new tournament from given settings?</string>
    <string name="createTournamentMessageOverwrite">Create new tournament from given settings? (Any unsaved tournaments will be lost.)</string>
    <string name="tournamentSaved">Tournament saved.</string>
    <string name="exitTournamentTitle">Exit Without Saving</string>
    <string name="exitTournamentMessage">Would you like to save the tournament before exiting?</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="unassign_seed">Unassign seed</string>
    <string name="tooManyGenerics">Too many generic participants created. Returning to settings to try again.</string>
    <string name="tooManyGenericsTitle">Max number of generic participants reached.</string>

</resources>
