<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuFragment">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/menu_title"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="@dimen/welcome_screen_title"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_tournament"
        android:id="@+id/button_start_tournament"
        android:layout_below="@+id/menu_title"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_tournament"
        android:id="@+id/button_create_tournament"
        android:layout_below="@+id/button_start_tournament"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_participants"
        android:id="@+id/button_participants"
        android:layout_below="@+id/button_create_tournament"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_teams"
        android:id="@+id/button_teams"
        android:layout_below="@+id/button_participants"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_history"
        android:id="@+id/button_history"
        android:layout_below="@+id/button_teams"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

</RelativeLayout>
