<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/participantInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/generic_padding"
    tools:context="com.mattkormann.tournamentmanager.ParticipantInfoFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/name_label"
            android:text="@string/enter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight=".3" />

        <EditText
            android:id="@+id/name_text_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:imeOptions="actionDone"
            android:layout_weight=".7"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/team_label"
            android:text="@string/type"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3" />

        <ToggleButton
            android:id="@+id/teamToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOff="@string/individual"
            android:textOn="@string/team"
            android:layout_weight=".7"/>

    </LinearLayout>

</LinearLayout>