<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mattkormann.tournamentmanager.TournamentSettingsFragment">

    <TextView
        android:paddingTop="@dimen/generic_padding"
        android:gravity="center_horizontal"
        android:id="@+id/tournament_settings_title"
        android:text="@string/tournament_settings"
        android:textSize="@dimen/generic_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/tournament_name_label"
            android:gravity="right"
            android:id="@+id/tournament_name_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/tournament_name_text"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/tournament_size"
            android:gravity="right"
            android:id="@+id/tournament_size_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <NumberPicker
            android:id="@+id/tournament_size_picker"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </NumberPicker>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/elimination_type_label"
            android:gravity="right"
            android:id="@+id/elimination_type_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/elimination_type_spinner"
            android:entries="@array/elimination_types"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/team_size_label"
            android:gravity="right"
            android:id="@+id/team_size_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/team_size_spinner"
            android:entries="@array/team_size_options"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/stat_tracking_label"
            android:gravity="right"
            android:id="@+id/stat_tracking_label"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ToggleButton
            android:id="@+id/stat_tracking_toggle"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </ToggleButton>
    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/generic_padding"
        android:paddingRight="@dimen/generic_padding"
        android:paddingEnd="@dimen/generic_padding"
        android:id="@+id/generate_tournament"
        android:text="@string/generate_tournament">

    </Button>
</LinearLayout>
