<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/participantsFragment"
    tools:context="com.mattkormann.tournamentmanager.ParticipantsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_participants"
        android:id="@+id/participant_title"
        android:layout_gravity="center_horizontal|top"
        android:textSize="@dimen/generic_title"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/generic_padding"
        android:id="@+id/participant_type"
        android:layout_gravity="center_horizontal|top"
        android:textSize="@dimen/generic_subtitle"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/add_participant"
            android:text="@string/add_participant"
            android:layout_gravity="start"
            style="@android:style/Widget.Button"
            android:layout_marginLeft="@dimen/generic_padding"
            android:layout_marginStart="@dimen/generic_padding" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_participant"
            android:text="@string/edit_participant"
            android:layout_gravity="end"
            style="@android:style/Widget.Button"
            android:layout_marginRight="@dimen/generic_padding"
            android:layout_marginEnd="@dimen/generic_padding" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_margin="@dimen/generic_padding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerView"
        android:layout_gravity="center" />

</LinearLayout>
